--- a/package.json
+++ b/package.json
@@ -8,14 +8,26 @@
     "/dist"
   ],
   "scripts": {
-    "prepare" : "npm run build",
+    "prepare": "npm run build",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint": "eslint --ignore-path .gitignore --ext .js,.ts .",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "author": "Curtis Hughes",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^4.6.3"
+    "@types/jest": "^27.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "jest": "^28.0.3",
+    "prettier": "^2.6.2",
+    "ts-jest": "^28.0.1",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   },
   "dependencies": {
     "rxjs": "^7.5.5"
@@ -23,5 +35,14 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/CurtisHughes/lunex"
-  }
+  },
+  "keywords": [
+    "state management",
+    "vuex",
+    "react",
+    "vue",
+    "redux",
+    "flux",
+    "mobx"
+  ]
 }
