--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
   "author": "Curtis Hughes",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^27.5.0",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.1",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
-    "eslint": "^8.14.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "jest": "^28.0.3",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "jest": "^29.6.1",
     "prettier": "^3.0.0",
-    "ts-jest": "^28.0.1",
-    "ts-node": "^10.7.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
@@ -35,6 +36,9 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/CurtisHughes/lunex"
+  },
+  "engines": {
+    "node": ">=18.16.1 <19"
   },
   "keywords": [
     "state management",
